--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,14 +1,12 @@
-<div class="outBox">
-    <div class="container">
-        <div class="logo">
-            <img src="assets/logo.png" alt="">
-        </div>
+<div class="login-page">
+    <div class="outBox">
+        <img class="logo" src="https://i.imgur.com/rSFPfeG.png" alt="">
         <div class="inputsMail">
-            <img src="assets/email.png" alt="">
+            <img src="https://i.imgur.com/75qYyVV.png" alt="">
             <input id="inputsMail" type="email" placeholder="mail@example.com">
         </div>
         <div class="inputsPss">
-            <img src="assets/padlock.png" alt="">
+            <img src="https://i.imgur.com/oACphon.png" alt="">
             <input id="inputsPss" type="password" placeholder="********">
         </div>
         <div class="forgot">
@@ -19,5 +17,4 @@
             <button id="btnSingUp" routerLink="/MainPage" routerLinkActive="active" ariaCurrentWhenActive="page">Sing Up</button>
         </div>
     </div>
-</div>
- 
+</div>    
