--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,79 +1,74 @@
 * {
-    /* outline: red dashed 1px; */
+    /* Estilos globales */
 }
 
 .outBox {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.container {
-    height: 500px;
     width: 500px;
+    height: 330px;
     border-radius: 24px;
+    position: absolute;
+    left: 30%;
+    top: 15%;
+    background-color: #acabab;
 }
 
 .logo {
-    display: flex;
-    justify-content:  center;
-}
-
-.logo img{
     position: relative;
+    margin-left: 43%;
     margin-top: 10px;
-    margin-bottom: 20px;
-    width: 20%;
+    margin-bottom: 8px;
+    width: 15%;
 }
 
 .inputsMail {
     display: flex;
     justify-content:  center;
-    align-items: center;
+    gap: 20px;
+    background-color: #dfdddd;
 }
 
 .inputsPss {
     margin-top: 20px;
     display: flex;
     justify-content:  center;
-    align-items: center;
+    gap: 20px;
+    background-color: #dfdddd;
 }
 
 .inputsMail img{
-    width: 20px;
-    height: 20px;
-    margin-right: 4px;
+    margin-top: 6px;
+    width: 40px;
+    height: 40px;
 }
 
 .inputsPss img{
-    width: 20px;
-    height: 20px;
-    margin-right: 4px;
+    margin-top: 6px;
+    width: 40px;
+    height: 40px;
 }
 
 #inputsMail {
+    border: none;
     color: rgb(122, 122, 122);
     margin-left: 5px;
-    border: 2px solid rgb(200, 200, 200);
     border-radius: 24px;
-    width: 100%;
-    max-width: 300px;
+    width: 300px;
     height: 50px;
     text-align: center;
     font-size: 15px;
+    color: #29a7a3;
 }
 
 #inputsPss {
+    border: none;
     color: rgb(122, 122, 122);
     margin-left: 5px;
-    border: 2px solid rgb(200, 200, 200);
     border-radius: 24px;
-    width: 100%;
-    max-width: 300px;
+    width: 300px;
     height: 50px;
     text-align: center;
     font-size: 15px;
+    color: #29a7a3;
 }
 
 .forgot {
@@ -84,6 +79,7 @@
 
 a {
     font-size: 15px;
+    color: #313131;
 }
 
 .buttons {
@@ -94,29 +90,22 @@ a {
 
 #btnLogIn {
     height: 40px;
-    width: 30%;
-    border: 2px solid rgb(200, 200, 200);
+    width: 90px;
+    font-weight:bolder;
+    border: none;
+    color: #313131;
     border-radius: 24px;
+    background-color: #62f5af;
     cursor: pointer;
-}
-
-#btnLogIn:hover {
-    border-color: black;
-    background-color: rgb(254, 218, 224);
 }
 
 #btnSingUp {
     height: 40px;
-    width: 30%;
-    border: 2px solid rgb(200, 200, 200);
+    width: 90px;
+    font-weight:bolder;
+    border: none;
+    color: #313131;
     border-radius: 24px;
+    background-color: #62f5af;
     cursor: pointer;
 }
-
-#btnSingUp:hover {
-    border-color: black;
-    background-color: rgb(254, 218, 224);
-}
-
-
-
