--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -8,7 +8,7 @@
             <!-- Logo icon --><b>
                 <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
                 <!-- Dark Logo icon -->
-                <img src="../assets/images/logo-icon.png" alt="homepage" class="dark-logo" />
+                <img src="https://i.imgur.com/75qYyVV.png" alt="homepage" class="dark-logo" />
                 <!-- Light Logo icon -->
                 <!-- <img src="../assets/images/logo-light-icon.png" alt="homepage" class="light-logo" /> -->
                 <!-- <img style="width: 100%;" src="assets/logo1.jpg" alt="homepage" class="light-logo" /> -->
@@ -19,7 +19,7 @@
               <img src="../assets/images/logo-text.png" alt="homepage" class="dark-logo" />
               <!-- Light Logo text -->
               <!-- <img src="../assets/images/logo-light-text.png" class="light-logo" alt="homepage" /></span> </a> -->
-              <img style="width: 100%;" src="assets/logo2.jpg" class="light-logo" alt="homepage" />
+              <img style="width: 90%;" src="../assets/Baner (1).png" class="light-logo" alt="homepage" />
             </span>
             </a>
     </div>
