Implementación de estilos del template, creación de Register, NoPageFound y rutas secundarias

--- a/src/assets/css/colors/green-dark.css
+++ b/src/assets/css/colors/green-dark.css
@@ -19,7 +19,7 @@ File: scss
 /*Top bar
 *******************/
 .topbar {
-  background: #06d79c; }
+  background: #2ca3a2; }
   .topbar .top-navbar .navbar-header .navbar-brand .dark-logo {
     display: none; }
   .topbar .top-navbar .navbar-header .navbar-brand .light-logo {
