--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -18,12 +18,13 @@ File: scss
 /*******************
 Login register and recover password Page
 ******************/
+
 .login-register {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   padding: 10% 0;
   position: fixed;
   display: flex;
@@ -31,10 +32,17 @@ Login register and recover password Page
   justify-content: flex-end;
 }
 
+.formulario {
+    margin-top: 140px;
+}
+
 .login-box {
+  padding-top: 30px;
   width: 450px;
-  height: 100%; 
+  height: 900px; 
   margin-left: auto;
+  margin-right: 50px;
+  border-radius: 24px;
 }
 
 .login-box .footer {
@@ -57,10 +65,11 @@ Login register and recover password Page
     margin-top: 0px;
 }
 
+
 .login-register.login-sidebar {
-    background: linear-gradient(45deg, #04231b, #2ca3a2, #bffae6);
-    background-size: 300% 300%;
-    animation: gradientAnimation 10s linear infinite;
+    background: linear-gradient(45deg, rgba(44, 133, 110, 0.95), rgba(44, 163, 162, 0.95), rgba(191, 250, 230, 0.95)), url("src\assets\peopleLogin.jpg");
+    animation: gradientAnimation 60s linear infinite;
+    background-size: 150% 150%;
 }
 
 @keyframes gradientAnimation {
