Social MainPage links Works

--- a/src/app/pages/main-page/main-page.component.html
+++ b/src/app/pages/main-page/main-page.component.html
@@ -14,9 +14,9 @@
       <footer class="footer">
         <a routerLink="/Login" routerLinkActive="active" ariaCurrentWhenActive="page">Social Canvas 2023</a>
         <div class="social-media">
-          <a href="#"><img src="assets/ws.png" alt="Facebook" routerLink="/Login" routerLinkActive="active" ariaCurrentWhenActive="page"></a>
-          <a href="#"><img src="assets/fb.png" alt="Twitter" routerLink="/Login" routerLinkActive="active" ariaCurrentWhenActive="page"></a>
-          <a href="#"><img src="assets/ig.png" alt="Instagram" routerLink="/Login" routerLinkActive="active" ariaCurrentWhenActive="page"></a>
+          <a href="https://www.facebook.com/profile.php?id=100093665499228" target="_blank"><img src="assets/ws.png" alt="Facebook"></a>
+          <a href="https://www.facebook.com/profile.php?id=100093665499228" target="_blank"><img src="assets/fb.png" alt="Twitter"></a>
+          <a href="https://www.facebook.com/profile.php?id=100093665499228" target="_blank"><img src="assets/ig.png" alt="Instagram"></a>
         </div>
         <p>Síguenos en nuestras redes sociales</p>
       </footer>
