--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -6,8 +6,7 @@
         <div class="card-body">
             <form class="form-horizontal form-material" id="loginform" action="index.html">
                 <a href="javascript:void(0)" class="text-center db">
-                    <img src="https://i.imgur.com/AByAFIL.png" style="width: 300px;" alt="Home" /><br/>
-                
+                    <img src="https://i.imgur.com/AByAFIL.png" style="width: 300px;" alt="Home" />
                 </a>
                 <div class="formulario">
                     <div class="form-group m-t-40">
