--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -6,9 +6,9 @@
         <div class="card-body">
             <form class="form-horizontal form-material" id="loginform" action="index.html">
                 <a href="javascript:void(0)" class="text-center db">
-                    <img src="https://i.imgur.com/rSFPfeG.png" alt="Home" style="width: 40px; height: 40px;" /><br/>
-                    <span style="font-size: 18px; font-weight: bold; color: #2ca3a2; letter-spacing: 1px; margin-top: 20px;">Social Canvas</span>
+                    <img src="https://i.imgur.com/AByAFIL.png" style="width: 300px;" alt="Home" />
                 </a>
+                <div class="formulario">
                 <h3 class="box-title m-t-40 m-b-0">Register Now</h3><small>Create your account and enjoy</small>
                 <div class="form-group m-t-20">
                     <div class="col-xs-12">
@@ -48,6 +48,7 @@
                         <p>Already have an account? <a href="pages-login-2.html" class="text-info m-l-5"><b>Sign In</b></a></p>
                     </div>
                 </div>
+            </div>
             </form>
         </div>
     </div>
