--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -45,7 +45,7 @@
                 </div>
                 <div class="form-group m-b-0">
                     <div class="col-sm-12 text-center">
-                        <p>Already have an account? <a href="pages-login-2.html" class="text-info m-l-5"><b>Sign In</b></a></p>
+                        <p>Already have an account? <a href="/login" class="text-info m-l-5"><b>Sign In</b></a></p>
                     </div>
                 </div>
             </div>
