--- a/src/app/auth/register/register.component.css
+++ b/src/app/auth/register/register.component.css
@@ -65,7 +65,7 @@ Login register and recover password Page
 }
 
 .login-register.login-sidebar {
-    background: linear-gradient(45deg, rgba(44, 133, 110, 0.95), rgba(44, 163, 162, 0.95), rgba(191, 250, 230, 0.95)), url("src\assets\peopleLogin.jpg");
+    background: linear-gradient(45deg, rgba(44, 133, 110, 0.95), rgba(44, 163, 162, 0.95), rgba(191, 250, 230, 0.95)), url("src\assets\peopleRegister.jpg");
     animation: gradientAnimation 60s linear infinite;
     background-size: 150% 150%;
 }
