--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -85,8 +85,8 @@
                               <div class="dw-user-box">
                                   <div class="u-img"><img src="../assets/images/users/1.jpg" alt="user"></div>
                                   <div class="u-text">
-                                      <h4>Steave Jobs</h4>
-                                      <p class="text-muted">varun@gmail.com</p><a href="pages-profile.html" class="btn btn-rounded btn-danger btn-sm">View Profile</a></div>
+                                      <h4>Paco Rivera</h4>
+                                      <p class="text-muted">example@example.com</p><a href="pages-profile.html" class="btn btn-rounded btn-danger btn-sm">View Profile</a></div>
                               </div>
                           </li>
                           <li role="separator" class="divider"></li>
@@ -96,7 +96,7 @@
                           <li role="separator" class="divider"></li>
                           <li><a href="#"><i class="ti-settings"></i> Account Setting</a></li>
                           <li role="separator" class="divider"></li>
-                          <li><a href="#"><i class="fa fa-power-off"></i> Logout</a></li>
+                          <li><a href="/login"><i class="fa fa-power-off"></i> Logout</a></li>
                       </ul>
                   </div>
               </li>
