Login and Register links updated

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -5,7 +5,7 @@
     <div class="login-box card">
         <div class="card-body">
             <form class="form-horizontal form-material" id="loginform" action="index.html">
-                <a href="javascript:void(0)" class="text-center db">
+                <a href="/MainPage" class="text-center db">
                     <img src="https://i.imgur.com/AByAFIL.png" style="width: 300px;" alt="Home" />
                 </a>
                 <div class="formulario">
