--- a/src/app/shared/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/shared/breadcrumbs/breadcrumbs.component.html
@@ -2,21 +2,22 @@
 <!-- Bread crumb and right sidebar toggle -->
 <!-- ============================================================== -->
 <div class="row page-titles">
-  <div class="col-md-5 align-self-center">
-      <h3 class="text-themecolor">Whatsapp Groups</h3>
+    <div class="col-md-5 align-self-center">
+      <h3 class="text-themecolor">{{ breadcrumbText }}</h3>
+    </div>
+    <div class="col-md-7 align-self-center">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item">
+                <a href="javascript:void(0)">Home</a>
+            </li>
+            <li class="breadcrumb-item">Personal</li>
+            <li class="breadcrumb-item active">{{ breadcrumbText }}</li>
+        </ol>
+    </div>
+    <div>
+    </div>
   </div>
-  <div class="col-md-7 align-self-center">
-      <ol class="breadcrumb">
-          <li class="breadcrumb-item">
-              <a href="javascript:void(0)">Home</a>
-          </li>
-          <li class="breadcrumb-item">Personal</li>
-          <li class="breadcrumb-item active">Whatsapp Groups:</li>
-      </ol>
-  </div>
-  <div>
-  </div>
-</div>
-<!-- ============================================================== -->
-<!-- End Bread crumb and right sidebar toggle -->
-<!-- ============================================================== -->
+  <!-- ============================================================== -->
+  <!-- End Bread crumb and right sidebar toggle -->
+  <!-- ============================================================== -->
+  
