--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -4,19 +4,19 @@
 <section id="wrapper" class="login-register login-sidebar">
     <div class="login-box card">
         <div class="card-body">
-            <form class="form-horizontal form-material" id="loginform" action="index.html">
+            <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="form-horizontal form-material" id="loginform" action="index.html">
                 <a href="/MainPage" class="text-center db">
                     <img src="https://i.imgur.com/AByAFIL.png" style="width: 300px;" alt="Home" />
                 </a>
                 <div class="formulario">
                     <div class="form-group m-t-40">
                         <div class="col-xs-12">
-                            <input class="form-control" type="text" required="" placeholder="Username">
+                          <input class="form-control" type="email" required="true" placeholder="Email" formControlName="email">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-xs-12">
-                            <input class="form-control" type="password" required="" placeholder="Password">
+                          <input class="form-control" type="password" required="true" placeholder="Password" formControlName="password">
                         </div>
                     </div>
                     <div class="form-group row">
@@ -35,7 +35,7 @@
                     <div class="row">
                         <div class="col-xs-12 col-sm-12 col-md-12 m-t-10 text-center">
                             <div class="social">
-                                <a href="javascript:void(0)" class="btn  btn-facebook" data-toggle="tooltip" title="Login with Facebook"> <i aria-hidden="true" class="fa fa-facebook"></i> </a> <a href="javascript:void(0)" class="btn btn-googleplus" data-toggle="tooltip" title="Login with Google" style="width: 40px;"> <i aria-hidden="true" class="fa fa-google-plus"></i> </a> 
+                                <a href="javascript:void(0)" class="btn  btn-facebook" data-toggle="tooltip" title="Login with Facebook"> <i aria-hidden="true" class="fa fa-facebook"></i> </a> <a href="javascript:void(0)" class="btn btn-googleplus" data-toggle="tooltip" title="Login with Google" style="width: 40px;"> <i aria-hidden="true" class="fa fa-google-plus"></i> </a>
                             </div>
                         </div>
                     </div>
@@ -45,7 +45,7 @@
                         </div>
                     </div>
                 </div>
-                
+
             </form>
             <form class="form-horizontal" id="recoverform" action="index.html">
                 <div class="form-group ">
