--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -4,51 +4,52 @@
 <section id="wrapper" class="login-register login-sidebar">
     <div class="login-box card">
         <div class="card-body">
-            <form class="form-horizontal form-material" id="loginform" action="index.html">
+            <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="form-horizontal form-material">
                 <a href="/MainPage" class="text-center db">
                     <img src="https://i.imgur.com/AByAFIL.png" style="width: 300px;" alt="Home" />
                 </a>
                 <div class="formulario">
-                <h3 class="box-title m-t-40 m-b-0">Register Now</h3><small>Create your account and enjoy</small>
-                <div class="form-group m-t-20">
+                  <h3 class="box-title m-t-40 m-b-0">Register Now</h3><small>Create your account and enjoy</small>
+                  <div class="form-group m-t-20">
+                      <div class="col-xs-12">
+                        <input class="form-control" type="text" required="true" placeholder="Nombre" formControlName="firstName">
+                      </div>
+                  </div>
+                  <div class="form-group">
+                      <div class="col-xs-12">
+                          <input class="form-control" type="text" required="true" placeholder="Apellido" formControlName="lastName">
+                          <!-- <input class="form-control" type="text" required="" placeholder="Email"> -->
+                      </div>
+                  </div>
+                  <div class="form-group">
                     <div class="col-xs-12">
-                        <input class="form-control" type="text" required="" placeholder="Name">
+                        <input class="form-control" type="email" required="true" placeholder="Email" formControlName="email">
                     </div>
-                </div>
-                <div class="form-group ">
-                    <div class="col-xs-12">
-                        <input class="form-control" type="text" required="" placeholder="Email">
-                    </div>
-                </div>
-                <div class="form-group ">
-                    <div class="col-xs-12">
-                        <input class="form-control" type="password" required="" placeholder="Password">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-xs-12">
-                        <input class="form-control" type="password" required="" placeholder="Confirm Password">
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <div class="col-md-12">
-                        <div class="checkbox checkbox-primary p-t-0">
-                            <input id="checkbox-signup" type="checkbox">
-                            <label for="checkbox-signup"> I agree to all <a href="#">Terms</a></label>
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group text-center m-t-20">
-                    <div class="col-xs-12">
-                        <button class="btn btn-info btn-lg btn-block text-uppercase waves-effect waves-light" type="submit">Sign Up</button>
-                    </div>
-                </div>
-                <div class="form-group m-b-0">
-                    <div class="col-sm-12 text-center">
-                        <p>Already have an account? <a href="/login" class="text-info m-l-5"><b>Sign In</b></a></p>
-                    </div>
-                </div>
-            </div>
+                  </div>
+                  <div class="form-group ">
+                      <div class="col-xs-12">
+                        <input class="form-control" type="password" required="true" placeholder="Password" formControlName="password">
+                      </div>
+                  </div>
+                  <div class="form-group row">
+                      <div class="col-md-12">
+                          <div class="checkbox checkbox-primary p-t-0">
+                              <input id="checkbox-signup" type="checkbox" required="true">
+                              <label for="checkbox-signup"> I agree to all <a href="#">Terms</a></label>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="form-group text-center m-t-20">
+                      <div class="col-xs-12">
+                          <button class="btn btn-info btn-lg btn-block text-uppercase waves-effect waves-light" type="submit">Sign Up</button>
+                      </div>
+                  </div>
+                  <div class="form-group m-b-0">
+                      <div class="col-sm-12 text-center">
+                          <p>Already have an account? <a href="/login" class="text-info m-l-5"><b>Sign In</b></a></p>
+                      </div>
+                  </div>
+              </div>
             </form>
         </div>
     </div>
