--- a/src/app/pages/ws-canvas/ws-canvas.component.html
+++ b/src/app/pages/ws-canvas/ws-canvas.component.html
@@ -1,1 +1,72 @@
-<p>ws-canvas works!</p>
+<div class="container-fluid" *ngIf="showScreen">
+
+  <div class="row">
+
+    <div class="col-md-4">
+
+      <div class="user-list-card">
+        <div class="user-card"
+             [ngClass]="{ 'active': user?.phone === selectedUser?.phone }"
+             *ngFor="let user of userList"
+             (click)="selectUserHandler(user.phone)"
+        >
+          <img [src]="user?.image"
+               [alt]="user?.firstName"
+               class="avatar"
+          />
+          <span class="username">{{user?.firstName}} {{user?.lastName}}</span>
+        </div>
+      </div>
+
+    </div>
+    <div class="col-md-8">
+
+    <div class="chat-container" *ngIf="userSelected">
+      <ng-container *ngIf="selectedUser">
+        <div class="chat-header">
+
+          <img [src]="selectedUser.image"
+                [alt]="selectedUser.firstName"
+                class="avatar"
+          />
+          <span class="username">{{selectedUser.firstName}} {{selectedUser.lastName}}</span>
+        </div>
+
+        <div class="chat-body">
+          <div *ngFor="let item of messageArray"
+            [ngClass]="{ 'same-user': item?.sender === currentUser?.firstName }"
+          >
+            <p class="message-container">{{item?.content}}</p>
+          </div>
+        </div>
+
+        <div class="chat-footer">
+
+          <div class="row">
+            <div class="col-md-10">
+              <div class="form-group mb-0">
+                <input type="text"
+                        placeholder="Type a message"
+                        class="form-control"
+                        [(ngModel)]="messageText"
+                        (keyup)="$event.keyCode === 13 && sendMessage()"
+                />
+              </div>
+            </div>
+
+            <div class="col-md-2 text-center align-self-center">
+              <button class="btn btn-primary btn-sm px-3"
+                      (click)="sendMessage()">Send
+              </button>
+            </div>
+          </div>
+
+        </div>
+      </ng-container>
+    </div>
+
+    </div>
+
+  </div>
+
+</div>
