--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -77,26 +77,33 @@
               <!-- ============================================================== -->
               <!-- Profile -->
               <!-- ============================================================== -->
+              <!-- ============================================================== -->
+              <!-- Profile -->
+              <!-- ============================================================== -->
               <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle waves-effect waves-dark" href="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="../assets/images/users/1.jpg" alt="user" class="profile-pic" /></a>
-                  <div class="dropdown-menu dropdown-menu-right animated flipInY">
-                      <ul class="dropdown-user">
-                          <li>
-                              <div class="dw-user-box">
-                                  <div class="u-img"><img src="../assets/images/users/1.jpg" alt="user"></div>
-                                  <div class="u-text">
-                                      <h4>Paco Rivera</h4>
-                                      <p class="text-muted">example@example.com</p><a href="pages-profile.html" class="btn btn-rounded btn-danger btn-sm">View Profile</a></div>
-                              </div>
-                          </li>
-                          <li role="separator" class="divider"></li>
-                          <li><a href="#"><i class="ti-user"></i> My Profile</a></li>
-                          <li role="separator" class="divider"></li>
-                          <li><a href="#"><i class="ti-settings"></i> Account Setting</a></li>
-                          <li role="separator" class="divider"></li>
-                          <li><a href="/login"><i class="fa fa-power-off"></i> Logout</a></li>
-                      </ul>
-                  </div>
+                <a class="nav-link dropdown-toggle waves-effect waves-dark" href="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <img src="{{ currentUser?.image }}" alt="user" class="profile-pic" />
+                </a>
+                <div class="dropdown-menu dropdown-menu-right animated flipInY">
+                  <ul class="dropdown-user">
+                    <li>
+                      <div class="dw-user-box">
+                        <div class="u-img"><img src="{{ currentUser?.image }}" alt="user"></div>
+                        <div class="u-text">
+                          <h4>{{ currentUser?.firstName }} {{ currentUser?.lastName }}</h4>
+                          <p class="text-muted">{{ currentUser?.email }}</p>
+                          <a href="pages-profile.html" class="btn btn-rounded btn-danger btn-sm">View Profile</a>
+                        </div>
+                      </div>
+                    </li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="#"><i class="ti-user"></i> My Profile</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="#"><i class="ti-settings"></i> Account Setting</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="/login"><i class="fa fa-power-off"></i> Logout</a></li>
+                  </ul>
+                </div>
               </li>
           </ul>
       </div>
