--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -8,24 +8,38 @@
                 <a href="/MainPage" class="text-center db">
                     <img src="https://i.imgur.com/AByAFIL.png" style="width: 300px;" alt="Home" />
                 </a>
-                <div class="formulario">
-                    <div class="form-group m-t-40">
-                        <div class="col-xs-12">
-                          <input class="form-control" type="email" required="true" placeholder="Email" formControlName="email">
-                        </div>
+
+                <div class="alert alert-danger mt-4 {{ !loginError && 'd-none'}}">Usuario o contraseña inválida</div>
+
+                <div class="">
+                  <div class="form-group mt-4 {{ loginForm.controls['email'].invalid && flagSubmit && 'error' }}">
+                    <h5><span class="text-danger">*</span>Correo Eléctronico:</h5>
+                    <div class="controls">
+                      <input type="email" class="form-control" required data-validation-required-message="Este campo es requerido" formControlName="email">
+                      <div class="help-block {{ loginForm.controls['email'].invalid && flagSubmit ? '' : 'd-none' }}">
+                        <ul role="alert">
+                          <li>Este campo es requerido</li>
+                          <li>{{ loginForm.controls['email'].errors?.['email'] ? 'Ingrese un correo eléctronico válido' : '' }}</li>
+                        </ul>
+                      </div>
                     </div>
-                    <div class="form-group">
-                        <div class="col-xs-12">
-                          <input class="form-control" type="password" required="true" placeholder="Password" formControlName="password">
-                        </div>
+                  </div>
+
+                  <div class="form-group mt-4 {{ loginForm.controls['password'].invalid && flagSubmit && 'error' }}">
+                    <h5><span class="text-danger">*</span>Contraseña:</h5>
+                    <div class="controls">
+                      <input type="password" class="form-control" required data-validation-required-message="Este campo es requerido" formControlName="password">
+                      <div class="help-block {{ loginForm.controls['password'].invalid && flagSubmit ? '' : 'd-none' }}"><ul role="alert"><li>Este campo es requerido</li></ul></div>
                     </div>
+                  </div>
+
                     <div class="form-group row">
                         <div class="col-md-12">
                             <div class="checkbox checkbox-primary pull-left p-t-0">
                                 <input id="checkbox-signup" type="checkbox" class="filled-in chk-col-light-blue">
-                                <label for="checkbox-signup"> Remember me </label>
+                                <label for="checkbox-signup"> Recordarme </label>
                             </div>
-                            <a href="javascript:void(0)" id="to-recover" class="text-dark pull-right"><i class="fa fa-lock m-r-5"></i> Forgot pwd?</a> </div>
+                            <a href="javascript:void(0)" id="to-recover" class="text-dark pull-right"><i class="fa fa-lock m-r-5"></i> Olvidaste contraseña?</a> </div>
                     </div>
                     <div class="form-group text-center m-t-20">
                         <div class="col-xs-12">
@@ -41,7 +55,7 @@
                     </div>
                     <div class="form-group m-b-0">
                         <div class="col-sm-12 text-center">
-                            Don't have an account? <a href="/register" class="text-primary m-l-5"><b>Register</b></a>
+                            No tienes ninguna cuenta? <a href="/register" class="text-primary m-l-5"><b>Registrate</b></a>
                         </div>
                     </div>
                 </div>
