--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -4,49 +4,81 @@
 <section id="wrapper" class="login-register login-sidebar">
     <div class="login-box card">
         <div class="card-body">
-            <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="form-horizontal form-material">
+            <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="form-horizontal form-material" novalidate>
                 <a href="/MainPage" class="text-center db">
                     <img src="https://i.imgur.com/AByAFIL.png" style="width: 300px;" alt="Home" />
                 </a>
                 <div class="formulario">
-                  <h3 class="box-title m-t-40 m-b-0">Register Now</h3><small>Create your account and enjoy</small>
-                  <div class="form-group m-t-20">
-                      <div class="col-xs-12">
-                        <input class="form-control" type="text" required="true" placeholder="Nombre" formControlName="firstName">
-                      </div>
-                  </div>
-                  <div class="form-group">
-                      <div class="col-xs-12">
-                          <input class="form-control" type="text" required="true" placeholder="Apellido" formControlName="lastName">
-                          <!-- <input class="form-control" type="text" required="" placeholder="Email"> -->
-                      </div>
-                  </div>
-                  <div class="form-group">
-                    <div class="col-xs-12">
-                        <input class="form-control" type="email" required="true" placeholder="Email" formControlName="email">
+                  <h3 class="box-title m-t-40 m-b-0">Registrate ahora</h3><small>Crea tu cuenta y disfruta</small>
+
+                  <!-- <div class="form-group mt-4 {{ registerForm.controls['image'].invalid && flagSubmit && 'error' }}">
+                    <h5>Imagen (opcional):</h5>
+                    <div class="controls">
+                      <input type="text" class="form-control" formControlName="image" accept=".jpg,.png">
+                    </div>
+                  </div> -->
+
+                  <div class="form-group mt-4 {{ registerForm.controls['firstName'].invalid && flagSubmit && 'error' }}">
+                    <h5><span class="text-danger">*</span>Nombre:</h5>
+                    <div class="controls">
+                      <input type="text" class="form-control" required data-validation-required-message="Este campo es requerido" formControlName="firstName">
+                      <div class="help-block {{ registerForm.controls['firstName'].invalid && flagSubmit ? '' : 'd-none' }}"><ul role="alert"><li>Este campo es requerido</li></ul></div>
                     </div>
                   </div>
-                  <div class="form-group ">
-                      <div class="col-xs-12">
-                        <input class="form-control" type="password" required="true" placeholder="Password" formControlName="password">
-                      </div>
+
+                  <div class="form-group mt-4 {{ registerForm.controls['lastName'].invalid && flagSubmit && 'error' }}">
+                    <h5><span class="text-danger">*</span>Apellido:</h5>
+                    <div class="controls">
+                      <input type="text" class="form-control" required data-validation-required-message="Este campo es requerido" formControlName="lastName">
+                      <div class="help-block {{ registerForm.controls['lastName'].invalid && flagSubmit ? '' : 'd-none' }}"><ul role="alert"><li>Este campo es requerido</li></ul></div>
+                    </div>
                   </div>
+
+                  <div class="form-group mt-4 {{ registerForm.controls['phone'].invalid && flagSubmit && 'error' }}">
+                    <h5><span class="text-danger">*</span>Teléfono:</h5>
+                    <div class="controls">
+                      <input type="text" class="form-control" required data-validation-required-message="Este campo es requerido" formControlName="phone">
+                      <div class="help-block {{ registerForm.controls['phone'].invalid && flagSubmit ? '' : 'd-none' }}"><ul role="alert"><li>Este campo es requerido</li></ul></div>
+                    </div>
+                  </div>
+
+                  <div class="form-group mt-4 {{ registerForm.controls['email'].invalid && flagSubmit && 'error' }}">
+                    <h5><span class="text-danger">*</span>Correo Eléctronico:</h5>
+                    <div class="controls">
+                      <input type="email" class="form-control" required data-validation-required-message="Este campo es requerido" formControlName="email">
+                      <div class="help-block {{ registerForm.controls['email'].invalid && flagSubmit ? '' : 'd-none' }}">
+                        <ul role="alert">
+                          <li>Este campo es requerido</li>
+                          <li>{{ registerForm.controls['email'].errors?.['email'] ? 'Ingrese un correo eléctronico válido' : '' }}</li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="form-group mt-4 {{ registerForm.controls['password'].invalid && flagSubmit && 'error' }}">
+                    <h5><span class="text-danger">*</span>Contraseña:</h5>
+                    <div class="controls">
+                      <input type="password" class="form-control" required data-validation-required-message="Este campo es requerido" formControlName="password">
+                      <div class="help-block {{ registerForm.controls['password'].invalid && flagSubmit ? '' : 'd-none' }}"><ul role="alert"><li>Este campo es requerido</li></ul></div>
+                    </div>
+                  </div>
+
                   <div class="form-group row">
                       <div class="col-md-12">
                           <div class="checkbox checkbox-primary p-t-0">
                               <input id="checkbox-signup" type="checkbox" required="true">
-                              <label for="checkbox-signup"> I agree to all <a href="#">Terms</a></label>
+                              <label for="checkbox-signup">Estoy de acuerdo con todos los <a href="#">Terminos</a></label>
                           </div>
                       </div>
                   </div>
                   <div class="form-group text-center m-t-20">
                       <div class="col-xs-12">
-                          <button class="btn btn-info btn-lg btn-block text-uppercase waves-effect waves-light" type="submit">Sign Up</button>
+                          <button class="btn btn-info btn-lg btn-block text-uppercase waves-effect waves-light" type="submit">Registrarse</button>
                       </div>
                   </div>
                   <div class="form-group m-b-0">
                       <div class="col-sm-12 text-center">
-                          <p>Already have an account? <a href="/login" class="text-info m-l-5"><b>Sign In</b></a></p>
+                          <p>Ya tienes una cuenta? <a href="/login" class="text-info m-l-5"><b>Iniciar sesión</b></a></p>
                       </div>
                   </div>
               </div>
