--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,3 +1,10 @@
+<style>
+  .form-control:disabled, .form-control[readonly] {
+    background-color: #e9ecef !important;
+    opacity: 1 !important;
+  }
+</style>
+
 <header class="topbar">
   <nav class="navbar top-navbar navbar-expand-md navbar-light">
       <!-- ============================================================== -->
@@ -82,24 +89,26 @@
               <!-- ============================================================== -->
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle waves-effect waves-dark" href="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <img src="{{ currentUser?.image }}" alt="user" class="profile-pic" />
+                  <img src="{{ profileImage }}" alt="user" class="profile-pic" />
+                  <!-- <img src="{{ currentUser?.image }}" alt="user" class="profile-pic" /> -->
                 </a>
                 <div class="dropdown-menu dropdown-menu-right animated flipInY">
                   <ul class="dropdown-user">
                     <li>
                       <div class="dw-user-box">
-                        <div class="u-img"><img src="{{ currentUser?.image }}" alt="user"></div>
+                        <div class="u-img"><img src="{{ profileImage }}" alt="user"></div>
                         <div class="u-text">
                           <h4>{{ currentUser?.firstName }} {{ currentUser?.lastName }}</h4>
                           <p class="text-muted">{{ currentUser?.email }}</p>
-                          <a href="pages-profile.html" class="btn btn-rounded btn-danger btn-sm">View Profile</a>
+                          <!-- <a href="pages-profile.html" class="btn btn-rounded btn-danger btn-sm">View Profile</a> -->
+                          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo">Ver Perfil</button>
                         </div>
                       </div>
                     </li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="#"><i class="ti-user"></i> My Profile</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="#"><i class="ti-settings"></i> Account Setting</a></li>
+                    <!-- <li role="separator" class="divider"></li> -->
+                    <!-- <li><a href="#"><i class="ti-user"></i> My Profile</a></li> -->
+                    <!-- <li role="separator" class="divider"></li> -->
+                    <!-- <li><a href="#"><i class="ti-settings"></i> Account Setting</a></li> -->
                     <li role="separator" class="divider"></li>
                     <li><a href="/login"><i class="fa fa-power-off"></i> Logout</a></li>
                   </ul>
@@ -109,6 +118,108 @@
       </div>
   </nav>
 </header>
+
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel1">
+  <div class="modal-dialog" role="document">
+      <div class="modal-content">
+          <div class="modal-header">
+              <h4 class="modal-title" id="exampleModalLabel1">Perfil de Usuario</h4>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          </div>
+          <div class="modal-body">
+            <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="form-horizontal form-material" novalidate>
+              <!-- <a href="/MainPage" class="text-center db">
+                  <img src="https://i.imgur.com/AByAFIL.png" style="width: 300px;" alt="Home" />
+              </a> -->
+              <div class="formulario">
+                <div class="form-group mt-4 d-flex justify-content-center">
+                  <img src="{{ profileImage }}" class="img-circle" width="100">
+                  <!-- <div class="controls">
+                    <input type="text" class="form-control" required data-validation-required-message="Este campo es requerido" formControlName="firstName">
+                    <div class="help-block {{ registerForm.controls['firstName'].invalid && flagSubmit ? '' : 'd-none' }}"><ul role="alert"><li>Este campo es requerido</li></ul></div>
+                  </div> -->
+                </div>
+
+                <!-- <div class="form-group mt-4">
+                  <h5>Imagen (opcional):</h5>
+                  <div class="controls">
+                    <input type="text" class="form-control" formControlName="image" accept=".jpg,.png">
+                  </div>
+                </div> -->
+
+                <div class="form-group mt-4 {{ registerForm.controls['firstName'].invalid && flagSubmit && 'error' }}">
+                  <h5><span class="text-danger">*</span>Nombre:</h5>
+                  <div class="controls">
+                    <input type="text" class="form-control" required data-validation-required-message="Este campo es requerido" formControlName="firstName">
+                    <div class="help-block {{ registerForm.controls['firstName'].invalid && flagSubmit ? '' : 'd-none' }}"><ul role="alert"><li>Este campo es requerido</li></ul></div>
+                  </div>
+                </div>
+
+                <div class="form-group mt-4 {{ registerForm.controls['lastName'].invalid && flagSubmit && 'error' }}">
+                  <h5><span class="text-danger">*</span>Apellido:</h5>
+                  <div class="controls">
+                    <input type="text" class="form-control" required data-validation-required-message="Este campo es requerido" formControlName="lastName">
+                    <div class="help-block {{ registerForm.controls['lastName'].invalid && flagSubmit ? '' : 'd-none' }}"><ul role="alert"><li>Este campo es requerido</li></ul></div>
+                  </div>
+                </div>
+
+                <div class="form-group mt-4 {{ registerForm.controls['phone'].invalid && flagSubmit && 'error' }}">
+                  <h5><span class="text-danger">*</span>Teléfono:</h5>
+                  <div class="controls">
+                    <input type="text" class="form-control" required data-validation-required-message="Este campo es requerido" formControlName="phone">
+                    <div class="help-block {{ registerForm.controls['phone'].invalid && flagSubmit ? '' : 'd-none' }}"><ul role="alert"><li>Este campo es requerido</li></ul></div>
+                  </div>
+                </div>
+
+                <div class="form-group mt-4 {{ registerForm.controls['email'].invalid && flagSubmit && 'error' }}">
+                  <h5><span class="text-danger">*</span>Correo Eléctronico:</h5>
+                  <div class="controls">
+                    <input type="email" class="form-control" required data-validation-required-message="Este campo es requerido" formControlName="email" readonly>
+                    <div class="help-block {{ registerForm.controls['email'].invalid && flagSubmit ? '' : 'd-none' }}">
+                      <ul role="alert">
+                        <li>Este campo es requerido</li>
+                        <li>{{ registerForm.controls['email'].errors?.['email'] ? 'Ingrese un correo eléctronico válido' : '' }}</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+<!--
+                <div class="form-group mt-4 {{ registerForm.controls['password'].invalid && flagSubmit && 'error' }}">
+                  <h5><span class="text-danger">*</span>Contraseña:</h5>
+                  <div class="controls">
+                    <input type="password" class="form-control" required data-validation-required-message="Este campo es requerido" formControlName="password">
+                    <div class="help-block {{ registerForm.controls['password'].invalid && flagSubmit ? '' : 'd-none' }}"><ul role="alert"><li>Este campo es requerido</li></ul></div>
+                  </div>
+                </div> -->
+
+                <!-- <div class="form-group row">
+                    <div class="col-md-12">
+                        <div class="checkbox checkbox-primary p-t-0">
+                            <input id="checkbox-signup" type="checkbox" required="true">
+                            <label for="checkbox-signup">Estoy de acuerdo con todos los <a href="#">Terminos</a></label>
+                        </div>
+                    </div>
+                </div> -->
+                <div class="form-group text-center m-t-20">
+                    <div class="col-xs-12">
+                        <button class="btn btn-info btn-lg btn-block text-uppercase waves-effect waves-light" type="submit">Actualizar</button>
+                    </div>
+                </div>
+                <!-- <div class="form-group m-b-0">
+                    <div class="col-sm-12 text-center">
+                        <p>Ya tienes una cuenta? <a href="/login" class="text-info m-l-5"><b>Iniciar sesión</b></a></p>
+                    </div>
+                </div> -->
+              </div>
+            </form>
+          </div>
+          <!-- <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Send message</button>
+          </div> -->
+      </div>
+  </div>
+</div>
 <!-- ============================================================== -->
 <!-- End Topbar header -->
 <!-- ============================================================== -->
