--- a/src/assets/plugins/bootstrap-old/css/bootstrap.css
+++ b/src/assets/plugins/bootstrap-old/css/bootstrap.css
@@ -2293,8 +2293,8 @@ pre code {
 }
 
 .form-control:disabled, .form-control[readonly] {
-  background-color: #eceeef;
-  opacity: 1;
+  background-color: #e9ecef !important;
+  opacity: 1 !important;
 }
 
 .form-control:disabled {
