--- a/src/app/shared/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/shared/breadcrumbs/breadcrumbs.component.html
@@ -1,9 +1,9 @@
 <!-- ============================================================== -->
 <!-- Bread crumb and right sidebar toggle -->
 <!-- ============================================================== -->
-<div class="row page-titles">
+<div class="row page-titles" style="margin-top: 15px;">
     <div class="col-md-5 align-self-center">
-      <h3 class="text-themecolor">{{ breadcrumbText }}</h3>
+      <h3 [ngClass]="chatOptionClasses[selectedChatOption]">{{ breadcrumbText }}</h3>
     </div>
     <div class="col-md-7 align-self-center">
         <ol class="breadcrumb">
