--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -5,13 +5,13 @@
   }
 </style>
 
-<header class="topbar">
+<header class="topbar" [ngClass]="chatOptionClasses[selectedChatOption]">
   <nav class="navbar top-navbar navbar-expand-md navbar-light">
       <!-- ============================================================== -->
       <!-- Logo -->
       <!-- ============================================================== -->
       <div style="line-height: 69px;" class="navbar-header px-1">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="/MainPage">
             <!-- Logo icon --><b>
                 <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
                 <!-- Dark Logo icon -->
