--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -7,17 +7,20 @@
               <li class="nav-small-cap">Personal</li>
               <li>
                 <a class="waves-effect waves-dark text-white" (click)="selectChatOption('ws-chats')" aria-expanded="false">
-                  <i class="mdi mdi-gauge"></i><span class="hide-menu">Whatsapp</span>
+                  <img style="height: 20px; margin-left: 8px; margin-right: 10px;" src="assets/whatsapp-logo.svg" alt="Facebook">                
+                  <span class="hide-menu">Whatsapp</span>
                 </a>
               </li>
               <li>
                 <a class="waves-effect waves-dark text-white" (click)="selectChatOption('fb-canvas')" aria-expanded="false">
-                  <i class="mdi mdi-gauge"></i><span class="hide-menu">Facebook</span>
+                  <img style="height: 20px;" src="assets/Messenger-Logo.png" alt="Facebook">                
+                  <span class="hide-menu">Messenger</span>
                 </a>
               </li>
               <li>
                 <a class="waves-effect waves-dark text-white" (click)="selectChatOption('ig-canvas')" aria-expanded="false">
-                  <i class="mdi mdi-gauge"></i><span class="hide-menu">Instagram</span>
+                  <img style="height: 20px; margin-left: 8px; margin-right: 10px;" src="assets/Instagram_logo.svg.webp" alt="Facebook">                
+                  <span class="hide-menu">Instagram</span>
                 </a>
               </li>
 
